--- a/python/filecontrol.ipynb
+++ b/python/filecontrol.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fbbbba9d",
+   "id": "1c4bf37f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1c2cbda6",
+   "id": "d5b1776b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a10064e9",
+   "id": "4c482828",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "459b914b",
+   "id": "4cb98065",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "dcb5588b",
+   "id": "88936a4e",
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "a7665d26",
+   "id": "92c71494",
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "497bab36",
+   "id": "0c101be4",
    "metadata": {},
    "outputs": [
     {
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "23815b4b",
+   "id": "e9a24489",
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "7ab4c186",
+   "id": "227f3329",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "bf3ce6c8",
+   "execution_count": 28,
+   "id": "bf4f2950",
    "metadata": {},
    "outputs": [
     {
@@ -298,8 +298,211 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "e49fcf8f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import requests"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "3beb14a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<Response [200]>\n"
+     ]
+    }
+   ],
+   "source": [
+    "url = 'https://www.naver.com'\n",
+    "res = requests.get(url)\n",
+    "print(res)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "d893fdc9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "#print(res.text)\n",
+    "print(type(res.text))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "463fff82",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "365\n",
+      "6072\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(res.text.find('네이버'))\n",
+    "print(res.text.find('로그인'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "557b2456",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import bs4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "1d0434ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<html><body><div>안녕하세요</div></body></html>\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = \"<div>안녕하세요</div>\"\n",
+    "soup = bs4.BeautifulSoup(data)\n",
+    "print(soup)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "ff740733",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<div>안녕하세요</div>\n",
+      "안녕하세요\n"
+     ]
+    }
+   ],
+   "source": [
+    "# find : 특정 선택자를 통해서 해당 엘리먼트를 검색 -> 반환\n",
+    "print(soup.find('div'))\n",
+    "print(soup.find('div').text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "cab3f5b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2보] '성남FC 후원금 의혹' 이재명 검찰 출석\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "import bs4\n",
+    "\n",
+    "url = 'https://www.naver.com'\n",
+    "res = requests.get(url)\n",
+    "print(res)\n",
+    "\n",
+    "soup = bs4.BeautifulSoup(res.text)\n",
+    "find_data = soup.find('a', attrs={'class':'issue'})\n",
+    "print(find_data.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "089c01de",
+   "id": "f2f2e7d6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b54e829b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "58ea0cb4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "01a1943c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a3f71ac",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1f554159",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "95fe251b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "45d41977",
    "metadata": {},
    "outputs": [],
    "source": []
